# dp3t-c

./: CMakeLists.txt  README.md
include/: dp3t.h  hmac.h
src/: dp3t.c  hmac.c
test/: CMakeLists.txt  example.cpp
